--- a/staff/carlos-diestro/kanban/kanban-app/public/style.css
+++ b/staff/carlos-diestro/kanban/kanban-app/public/style.css
@@ -1,7 +1,3 @@
-html, body {
-    height: 100%;
-}
-
 .status {
     min-width: 250px;
 }
@@ -25,4 +21,8 @@ html, body {
 
 .error {
     color: red;
+}
+
+.dashed {
+    border: 3px dashed blue;
 }
