--- a/staff/carlos-diestro/cuve/app/src/components/ChatMessage/ChatMessage.css
+++ b/staff/carlos-diestro/cuve/app/src/components/ChatMessage/ChatMessage.css
@@ -5,7 +5,18 @@
 }
 
 .block img {
-  border-radius: 50%;
+  border-radius: 2rem;
+  max-width: 60px;
+  max-height: 60px;
+}
+
+.messages {
+  height: 50vh;
+  overflow-y: scroll; 
+}
+
+.chat .form-control, .my-msg, .msg {
+  border-radius: 2rem;
 }
 
 .thread .text {
@@ -13,7 +24,7 @@
   padding-left: 0;
 }
 
-.edit .form-control, .alert {
+.edit .form-control {
   border-radius: 2rem;
 }
 
@@ -43,4 +54,12 @@
 
 .custom-file-label::after {
   border-radius: 0 25px 25px 0;
+}
+
+.my-msg {
+  background-color: #66bb6a;
+}
+
+.msg {
+  background-color: #bdbdbd;
 }
