fix minor issues

--- a/staff/carlos-diestro/cuve/app/src/components/User/User.css
+++ b/staff/carlos-diestro/cuve/app/src/components/User/User.css
@@ -5,10 +5,11 @@
 }
 
 .block img {
-  border-radius: 50%;
+  border-radius: 3rem;
 }
 
 .block .avatar {
   max-width: 80px;
-  max-height: 80px
+  max-height: 80px;
+  border-radius: 3rem;
 }
